[FIX] update sass dependencies

--- a/app/scenes/card.html
+++ b/app/scenes/card.html
@@ -14,7 +14,7 @@
         <img src="images/logo.svg" alt="oyi logo" class="loader__image">
         <p class="loader__text">Chargement ...</p>
     </div>
-     <main id="oracle-card" class="app-template app-template app-template__card-decoration app-template__card-decoration--full">
+     <main id="oracle-card" class="oyi-app-template oyi-app-template__card-decoration oyi-app-template__card-decoration--full">
         <h1>OYI</h1>
         <section class="oracle-card">
             <img id="oracle-asana-image" src="#" alt="asana pose" class="oracle-card__main-asana" >
@@ -24,7 +24,7 @@
                 </p>
             </div>
         </section>
-        <a class="app-template__button app-template__button--center" href="./card.html">Tirer une autre carte</a>
+        <a class="oyi-app-template__button oyi-app-template__button--center" href="./card.html">Tirer une autre carte</a>
      </main>
     <% for(var i=0; i < htmlWebpackPlugin.files.js.length; i++) {%>
         <script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[i] %>"></script>
